force-app/main/default/objects/Apttus_Config2__AgreementPriceTier__c/Apttus_Config2__AgreementPriceTier__c.object-meta.xml
<CustomObject>
    <description>Represents a single entry in an agreement price tier</description>
    <label>Agreement Price Tier</label>
    <nameField>
        <displayFormat>PT-{0000000000}</displayFormat>
        <label>Tier Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Price Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>