force-app/main/default/objects/Apttus_Config2__AgreementPriceTier__c/fields/Apttus_Config2__Dimension5Value__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Dimension5Value__c</fullName>
    <description>The value for the fifth dimension</description>
    <label>Dimension 5 Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>