force-app/main/default/objects/Apttus_Config2__AgreementPriceTier__c/fields/Apttus_Config2__PriceRuleId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PriceRuleId__c</fullName>
    <description>ID of the associated rule</description>
    <inlineHelpText>ID of the associated rule</inlineHelpText>
    <label>Price Rule</label>
    <referenceTo>Apttus_Config2__AgreementPriceRule__c</referenceTo>
    <relationshipLabel>Agreement Price Tiers</relationshipLabel>
    <relationshipName>PriceTiers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>