force-app/main/default/objects/Apttus_Config2__AgreementPriceTier__c/fields/Apttus_Config2__TierStartValue__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TierStartValue__c</fullName>
    <description>The tier start value</description>
    <inlineHelpText>The tier start value</inlineHelpText>
    <label>From</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>